@@ -1,6 +1,10 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.97 2004/10/16 13:38:09 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.98 2004/10/18 02:55:16 zhen Exp $
+
+  17 Oct 2004; John Davis <zhen@gentoo.org>
+  livecd/runscript-support/livecdfs-update.sh:
+  firmware tarball fix for packages that need firmware such as ipw2100
 
   16 Oct 2004; <zhen@gentoo.org> livecd/files/x86-help.msg,
   livecd/runscript/x86-archscript.sh, livecd/runscript-support/kmerge.sh,
